# MDGAT-matcher

./: .gitignore  emplimentation_mdgat.ipynb  emplimentation_mdgat_2404178.ipynb  emplimentation_mdgat_240520.ipynb  emplimentation_mdgat_240528.ipynb  emplimentation_mdgat_240608.ipynb  emplimentation_sg.ipynb  emplimentation_sg_240608.ipynb  environment.yml  load_data.py  load_data_Rops.py  load_data_Rops2.py  load_data_Rops_SG_0530.py  load_data_custom.py  load_data_custom_for_org.py  load_data_denseKITTI.py  make_new_descriptor  make_new_descriptor.ipynb  pc_downsampling.py  test.py  test_240408.ipynb  test_240412.ipynb  test_240415.ipynb  test_240415_mdgat.ipynb  test_240417.ipynb  test_2404178_mdgat.ipynb  test_240417_2.ipynb  test_custom_pose.py  test_gobal_local_matching.py  test_registration_metric.py  test_registration_metric_Rops.py  test_rops.py  test_rops_0527.py  train.py  train_Rops.py  train_Rops_0527.py  train_Rops_SG_0530.py  train_custom.py  train_mdgat.py  train_mdgat_0605.py  (+1 more)
denseKITTI/groundtruths/00/: groundtruths.txt
denseKITTI/groundtruths/01/: groundtruths.txt
denseKITTI/groundtruths/02/: groundtruths.txt
denseKITTI/groundtruths/03/: groundtruths.txt
denseKITTI/poses/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt
models/: mdgat.py  mdgat_Rops.py  mdgat_Rops2.py  mdgat_Rops_SG.py  mdgat_denseKITTI.py  mdgat_orignal_explain.py  superglue.py  test_mdgat.py
models/pointnet/: pointnet_util.py
utils/: CMakeLists.txt  make_new_descriptor.cpp  utils_test.py
(+29 files in other folders)
